--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
 <body>
 	
 <!-- Nav -->
-	<nav class="navbar navbar-light navbar-expand-sm fixed-top bg-light"> 
+	<nav class="navbar navbar-light navbar-expand-sm bg-light"> 
 		<div class="container-fluid mr-5">
-			<div class="navbar-brand">
+			<div class="navbar-brand d-none d-sm-block">
 				<a href="index.html">
 					<img src="img/logo.png" alt="logo" class="logo logo1">
 				</a>
@@ -45,7 +45,9 @@
 	</nav> <!-- Nav end -->
 	
 	<!--Banner video -->
-    <video class ="" src=""></video>
+	<div class="video-container">
+    <video class ="video" src="img/pawbox_header (1).mp4" autoplay muted loop></video>
+	</div>
 	
 	<!--Text-->
 	<div class="container">
